udemy-course/sec12-ingress/04-host-based-routing/qa-wrokload/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 2
  template:
    metadata:
      labels:
        app: my-app
    spec: 
      terminationGracePeriodSeconds: 1
      containers: 
      - name: nginx
        image: vinsdocker/k8s-app:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
  - name: web-port
    port: 80
    targetPort: 80
